refactor: new flux users roles